<resources>
    <string name="app_name">海绵书屋2</string>

    <string name="my_books">我的图书</string>
    <string name="my_friends">我的好友</string>
    <string name="add_friend">添加好友</string>
    <string name="surrounding_users">周边用户</string>
    <string name="book_loading">加载中…</string>
    <string name="add_to_book_list">加入书库</string>

    <string name="login">登录</string>
    <string name="loggingin">登录中…</string>
    <string name="logout">退出登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="gender">性别</string>
    <string name="location">位置</string>
    <string name="nick">昵称</string>
    <string name="search_friends">搜索好友</string>
    <string name="searching_friends">搜索中…</string>
    <string name="search_friends_failed">搜索失败</string>
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败</string>
    <string name="accept_request">通过请求</string>
    <string name="request_accepted">已通过请求</string>
    <string name="submit">提交</string>

    <string name="username_password_empty_msg">用户名和密码不能为空</string>
    <string name="username_password_wrong">用户名或密码错误</string>
    <string name="format__login_fail_with_status" formatted="false">登录失败，状态码：%d</string>
    <string name="search_pattern_empty_msg">不能为空</string>
    <string name="friend_requested_msg">已发送请求</string>
    <string name="friend_request_failed_msg">请求失败</string>

    <string name="borrow_book">借阅</string>
    <string name="borrow_setting">借阅设置</string>
    <string name="borrowable">可借阅</string>
    <string name="borrow_deposit">押金</string>
    <string name="borrow_rental">日租金</string>

    <string name="book_search_failed">未找到此书</string>
    <string name="format__book_list_inserted_ignored" formatted="false">更新成功，插入%d本，忽略%d本</string>
</resources>
