<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.exprosic.spongebook2.LoginActivity">
    <GridLayout
        android:columnCount="2"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:text="@string/username"
            android:layout_gravity="right"/>
        <EditText android:id="@+id/username_edit"
            android:inputType="text"
            android:layout_width="@dimen/login_edit_text_width"/>
        <TextView android:text="@string/password"
            android:layout_gravity="right"/>
        <EditText android:id="@+id/password_edit"
            android:inputType="textPassword"
            android:layout_width="@dimen/login_edit_text_width" />
        <Button android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"/>
    </GridLayout>
</RelativeLayout>
